--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
             font-size: 14px;
             color: #333;
         }
+        .assinatura {
+            font-size: 14px;
+            color: #333;
+            font-style: italic;
+            margin-top: 10px;
+        }
+    </style
     </style>
 </head>
 <body>
@@ -60,6 +67,7 @@
             <div class="mensagem">Junte-se a nós para uma celebração especial.</div>
             <div class="localização">Vai ser no Fausto manuel da Asa norte</div>
             <div class="horas">Por volta das 18:30</div>
+            <div class="assinatura">Karina C.B. da Silva</div>
         </div>
     </div>
     <script>
